Адаптация секции "Узнайте стоимость ремонта"

--- a/assets/html/chunk/repair-cost.html
+++ b/assets/html/chunk/repair-cost.html
@@ -147,7 +147,7 @@
 									/>
 									<label class="repair-cost-card-social__label" for="whatsapp">
 										<svg class="repair-cost-card-social__icon">
-											<use href="img/icons/sprite.svg#telegram-icon"></use>
+											<use href="img/icons/sprite.svg#whatsapp-icon"></use>
 										</svg>
 										<span class="repair-cost-card-social__name">Whatsapp</span>
 									</label>
@@ -157,7 +157,7 @@
 									<input class="is-hidden" id="phone" name="social" type="radio" value="phone" />
 									<label class="repair-cost-card-social__label" for="phone">
 										<svg class="repair-cost-card-social__icon">
-											<use href="img/icons/sprite.svg#telegram-icon"></use>
+											<use href="img/icons/sprite.svg#phone-icon"></use>
 										</svg>
 										<span class="repair-cost-card-social__name">Телефон</span>
 									</label>
@@ -167,7 +167,7 @@
 									<input class="is-hidden" id="viber" name="social" type="radio" value="viber" />
 									<label class="repair-cost-card-social__label" for="viber">
 										<svg class="repair-cost-card-social__icon">
-											<use href="img/icons/sprite.svg#telegram-icon"></use>
+											<use href="img/icons/sprite.svg#viber-icon"></use>
 										</svg>
 										<span class="repair-cost-card-social__name">Viber</span>
 									</label>
