--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -14,7 +14,11 @@
 	<body>
 		<div class="site-container">
 			@include('../components/header/header.html')
-			<main class="main">@include('chunk/hero.html')@include('chunk/repair-cost.html')</main>
+			<main class="main">
+				<!-- @include('chunk/hero.html') -->
+				@include('chunk/repair-cost.html')
+				@include('chunk/questions.html')
+			</main>
 			@include('chunk/footer.html')
 		</div>
 		<script src="js/scripts.min.js"></script>
