Адаптация секции "Вопрос-ответ"

--- a/assets/html/chunk/questions.html
+++ b/assets/html/chunk/questions.html
@@ -3,6 +3,7 @@
 		<div class="questions">
 			<h2 class="title">Вопрос-ответ</h2>
 			@include('../../components/spollers/spollers.html')
+			<a class="link link-reset" href="#/">Задать вопрос</a>
 		</div>
 	</div>
 </section>
