Вёрстка секции Преимущества

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -16,6 +16,7 @@
 			@include('../components/header/header.html')
 			<main class="main">
 				<!-- @include('chunk/hero.html') -->
+				@include('chunk/advantage.html')
 				@include('chunk/repair-cost.html')
 				@include('chunk/questions.html')
 			</main>
