Вёрстка карточек в секции Преимущества

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -17,6 +17,7 @@
 			<main class="main">
 				<!-- @include('chunk/hero.html') -->
 				@include('chunk/advantage.html')
+				@include('chunk/steps.html')
 				@include('chunk/repair-cost.html')
 				@include('chunk/questions.html')
 			</main>
