Вёрстка секции Контакты

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -20,6 +20,7 @@
 				@include('chunk/steps.html')
 				@include('chunk/repair-cost.html')
 				@include('chunk/questions.html')
+				@include('chunk/contacts.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
