Правки в секции "Стоимость ремонта"

--- a/assets/html/chunk/repair-cost.html
+++ b/assets/html/chunk/repair-cost.html
@@ -33,16 +33,19 @@
 						</picture>
 					</div>
 					<div class="repair-cost-card__content">
-						<h3 class="subtitle repair-cost-card__title">Черновой ремонт</h3>
+						<h3 class="repair-cost-card__title">Черновой ремонт</h3>
 						<p class="text repair-cost-card__text">
 							От качества черновой подготовки зависит долговечность всего ремонта, поэтому это
 							сложный и очень важный этап. В процессе работ закладываются коммуникационные сети и
 							квартира подготавливается к чистовой отделке.
 						</p>
-						<span class="repair-cost-card__cost">
-							от <span class="repair-cost-card__cost repair-cost-card__cost--blue">910</span> руб/м2
-						</span>
-						<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						<div class="repair-cost-card__inner">
+							<span class="repair-cost-card__cost">
+								от
+								<span class="repair-cost-card__cost repair-cost-card__cost--blue">910</span> руб/м2
+							</span>
+							<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						</div>
 					</div>
 				</div>
 				<div class="repair-cost__card repair-cost-card">
@@ -60,11 +63,13 @@
 							черновой и косметической отделкой. Все заботы берем на себя, а от клиента требуется
 							только согласование дизайн-проекта и выбор материалов.
 						</p>
-						<span class="repair-cost-card__cost">
-							от
-							<span class="repair-cost-card__cost repair-cost-card__cost--blue">2320</span> руб/м2
-						</span>
-						<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						<div class="repair-cost-card__inner">
+							<span class="repair-cost-card__cost">
+								от
+								<span class="repair-cost-card__cost repair-cost-card__cost--blue">2320</span> руб/м2
+							</span>
+							<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						</div>
 					</div>
 				</div>
 				<div class="repair-cost__card repair-cost-card">
@@ -82,11 +87,13 @@
 							интерьерные решения. Предполагает выполнение всех работ под ключ: от подготовки
 							дизайн-проекта до сдачи-приемки объекта клиенту.
 						</p>
-						<span class="repair-cost-card__cost">
-							от
-							<span class="repair-cost-card__cost repair-cost-card__cost--blue">3570</span> руб/м2
-						</span>
-						<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						<div class="repair-cost-card__inner">
+							<span class="repair-cost-card__cost">
+								от
+								<span class="repair-cost-card__cost repair-cost-card__cost--blue">3570</span> руб/м2
+							</span>
+							<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						</div>
 					</div>
 				</div>
 				<div class="repair-cost__card repair-cost-card">
@@ -104,11 +111,13 @@
 							интерьерные решения. Предполагает выполнение всех работ под ключ: от подготовки
 							дизайн-проекта до сдачи-приемки объекта клиенту.
 						</p>
-						<span class="repair-cost-card__cost">
-							от
-							<span class="repair-cost-card__cost repair-cost-card__cost--blue">3510</span> руб/м2
-						</span>
-						<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						<div class="repair-cost-card__inner">
+							<span class="repair-cost-card__cost">
+								от
+								<span class="repair-cost-card__cost repair-cost-card__cost--blue">3510</span> руб/м2
+							</span>
+							<a class="link link-reset repair-cost-card__link" href="#/">Подробнее</a>
+						</div>
 					</div>
 				</div>
 				<div class="repair-cost__card repair-cost-card repair-cost-card--form">
