--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -15,7 +15,7 @@
 		<div class="site-container">
 			<!-- @include('../components/header/header.html') -->
 			<main class="main">
-				<!-- @include('chunk/hero.html') -->
+				@include('chunk/hero.html')
 				@include('chunk/advantage.html')
 				@include('chunk/steps.html')
 				@include('chunk/repair-cost.html')
