--- a/assets/html/chunk/repair-cost.html
+++ b/assets/html/chunk/repair-cost.html
@@ -12,7 +12,7 @@
 						</picture>
 					</div>
 					<div class="repair-cost-card__content">
-						<h3 class="subtitle repair-cost-card__title">Косметический ремонт</h3>
+						<h3 class="repair-cost-card__title">Косметический ремонт</h3>
 						<p class="text repair-cost-card__text">
 							Позволяет обновить интерьер с минимальными денежными затратами. К работе также
 							подключается дизайнер, и предварительно разрабатывается проект. В ремонт не входит
@@ -57,7 +57,7 @@
 						</picture>
 					</div>
 					<div class="repair-cost-card__content">
-						<h3 class="subtitle repair-cost-card__title">Капитальный ремонт</h3>
+						<h3 class="repair-cost-card__title">Капитальный ремонт</h3>
 						<p class="text repair-cost-card__text">
 							Включает полный комплекс работ: вместе с демонтажем старых покрытий и коммуникаций,
 							черновой и косметической отделкой. Все заботы берем на себя, а от клиента требуется
@@ -81,7 +81,7 @@
 						</picture>
 					</div>
 					<div class="repair-cost-card__content">
-						<h3 class="subtitle repair-cost-card__title">Дизайнерский ремонт</h3>
+						<h3 class="repair-cost-card__title">Дизайнерский ремонт</h3>
 						<p class="text repair-cost-card__text">
 							Дает возможность полностью переделать свой дом или квартиру и реализовать необычные
 							интерьерные решения. Предполагает выполнение всех работ под ключ: от подготовки
@@ -105,7 +105,7 @@
 						</picture>
 					</div>
 					<div class="repair-cost-card__content">
-						<h3 class="subtitle repair-cost-card__title">Евроремонт</h3>
+						<h3 class="repair-cost-card__title">Евроремонт</h3>
 						<p class="text repair-cost-card__text">
 							Дает возможность полностью переделать свой дом или квартиру и реализовать необычные
 							интерьерные решения. Предполагает выполнение всех работ под ключ: от подготовки
@@ -120,17 +120,13 @@
 						</div>
 					</div>
 				</div>
-				<div class="repair-cost__card repair-cost-card repair-cost-card--form">
-					<div class="repair-cost-card__content">
-						<h3 class="subtitle repair-cost-card__title repair-cost-card__title--no-underline">
-							Получить консультацию
-						</h3>
-						<p class="text repair-cost-card__text">
-							Выберите способ связи и наш специалист свяжется с вами в ближайшее время
-						</p>
 						<form class="form" action="#">
-							<div class="repair-cost-card__socials repair-cost-card-socials">
-								<div class="repair-cost-card-social">
+							<h3 class="form__title">Получить консультацию</h3>
+							<p class="text form__descr">
+								Выберите способ связи и наш специалист свяжется с вами в ближайшее время
+							</p>
+							<div class="form__socials">
+								<div class="form__social form-social">
 									<input
 										class="is-hidden"
 										id="telegram"
@@ -138,15 +134,15 @@
 										type="radio"
 										value="telegram"
 									/>
-									<label class="repair-cost-card-social__label" for="telegram">
-										<svg class="repair-cost-card-social__icon">
+									<label class="form-social__label" for="telegram">
+										<svg class="form-social__icon">
 											<use href="img/icons/sprite.svg#telegram-icon"></use>
 										</svg>
-										<span class="repair-cost-card-social__name">Telegram</span>
+										<span class="form-social__name">Telegram</span>
 									</label>
 								</div>
 
-								<div class="repair-cost-card-social">
+								<div class="form__social form-social">
 									<input
 										class="is-hidden"
 										id="whatsapp"
@@ -154,31 +150,31 @@
 										type="radio"
 										value="whatsapp"
 									/>
-									<label class="repair-cost-card-social__label" for="whatsapp">
-										<svg class="repair-cost-card-social__icon">
+									<label class="form-social__label" for="whatsapp">
+										<svg class="form-social__icon">
 											<use href="img/icons/sprite.svg#whatsapp-icon"></use>
 										</svg>
-										<span class="repair-cost-card-social__name">Whatsapp</span>
+										<span class="form-social__name">Whatsapp</span>
 									</label>
 								</div>
 
-								<div class="repair-cost-card-social">
+								<div class="form__social form-social">
 									<input class="is-hidden" id="phone" name="social" type="radio" value="phone" />
-									<label class="repair-cost-card-social__label" for="phone">
-										<svg class="repair-cost-card-social__icon">
+									<label class="form-social__label" for="phone">
+										<svg class="form-social__icon">
 											<use href="img/icons/sprite.svg#phone-icon"></use>
 										</svg>
-										<span class="repair-cost-card-social__name">Телефон</span>
+										<span class="form-social__name">Телефон</span>
 									</label>
 								</div>
 
-								<div class="repair-cost-card-social">
+								<div class="form__social form-social">
 									<input class="is-hidden" id="viber" name="social" type="radio" value="viber" />
-									<label class="repair-cost-card-social__label" for="viber">
-										<svg class="repair-cost-card-social__icon">
+									<label class="form-social__label" for="viber">
+										<svg class="form-social__icon">
 											<use href="img/icons/sprite.svg#viber-icon"></use>
 										</svg>
-										<span class="repair-cost-card-social__name">Viber</span>
+										<span class="form-social__name">Viber</span>
 									</label>
 								</div>
 							</div>
@@ -197,6 +193,4 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
 </section>
