--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<div class="site-container">
-			<!-- @include('../components/header/header.html') -->
+			@include('../components/header/header.html')
 			<main class="main">
 				@include('chunk/hero.html')
 				@include('chunk/advantage.html')
