Адаптация секции "Шаги"

--- a/assets/html/chunk/steps.html
+++ b/assets/html/chunk/steps.html
@@ -1,62 +1,64 @@
 <section class="section section--decor">
 	<div class="container">
 		<div class="steps">
-			<form class="form" action="#">
-				<h3 class="form__title">Сделай первый шаг к ремонту мечты</h3>
-				<p class="text form__descr">Закажи обратный звонок</p>
-				<div class="form__socials">
-					<div class="form__social form-social">
-						<input class="is-hidden" id="telegram" name="social" type="radio" value="telegram" />
-						<label class="form-social__label" for="telegram">
-							<svg class="form-social__icon">
-								<use href="img/icons/sprite.svg#telegram-icon"></use>
-							</svg>
-							<span class="form-social__name">Telegram</span>
-						</label>
-					</div>
+			<div class="steps__form">
+				<form class="form" action="#">
+					<h3 class="form__title">Сделай первый шаг к ремонту мечты</h3>
+					<p class="text form__descr">Закажи обратный звонок</p>
+					<div class="form__socials">
+						<div class="form__social form-social">
+							<input class="is-hidden" id="telegram" name="social" type="radio" value="telegram" />
+							<label class="form-social__label" for="telegram">
+								<svg class="form-social__icon">
+									<use href="img/icons/sprite.svg#telegram-icon"></use>
+								</svg>
+								<span class="form-social__name">Telegram</span>
+							</label>
+						</div>
 
-					<div class="form__social form-social">
-						<input class="is-hidden" id="whatsapp" name="social" type="radio" value="whatsapp" />
-						<label class="form-social__label" for="whatsapp">
-							<svg class="form-social__icon">
-								<use href="img/icons/sprite.svg#whatsapp-icon"></use>
-							</svg>
-							<span class="form-social__name">Whatsapp</span>
-						</label>
-					</div>
+						<div class="form__social form-social">
+							<input class="is-hidden" id="whatsapp" name="social" type="radio" value="whatsapp" />
+							<label class="form-social__label" for="whatsapp">
+								<svg class="form-social__icon">
+									<use href="img/icons/sprite.svg#whatsapp-icon"></use>
+								</svg>
+								<span class="form-social__name">Whatsapp</span>
+							</label>
+						</div>
 
-					<div class="form__social form-social">
-						<input class="is-hidden" id="phone" name="social" type="radio" value="phone" />
-						<label class="form-social__label" for="phone">
-							<svg class="form-social__icon">
-								<use href="img/icons/sprite.svg#phone-icon"></use>
-							</svg>
-							<span class="form-social__name">Телефон</span>
-						</label>
-					</div>
+						<div class="form__social form-social">
+							<input class="is-hidden" id="phone" name="social" type="radio" value="phone" />
+							<label class="form-social__label" for="phone">
+								<svg class="form-social__icon">
+									<use href="img/icons/sprite.svg#phone-icon"></use>
+								</svg>
+								<span class="form-social__name">Телефон</span>
+							</label>
+						</div>
 
-					<div class="form__social form-social">
-						<input class="is-hidden" id="viber" name="social" type="radio" value="viber" />
-						<label class="form-social__label" for="viber">
-							<svg class="form-social__icon">
-								<use href="img/icons/sprite.svg#viber-icon"></use>
-							</svg>
-							<span class="form-social__name">Viber</span>
-						</label>
+						<div class="form__social form-social">
+							<input class="is-hidden" id="viber" name="social" type="radio" value="viber" />
+							<label class="form-social__label" for="viber">
+								<svg class="form-social__icon">
+									<use href="img/icons/sprite.svg#viber-icon"></use>
+								</svg>
+								<span class="form-social__name">Viber</span>
+							</label>
+						</div>
 					</div>
-				</div>
-				<div class="form__inputs">
-					<input class="form__input-text" type="text" placeholder="Ваше имя" />
-					<input class="form__input-text" type="text" placeholder="Ваш телефон" />
-					<input class="btn-reset form__input-button" type="submit" value="Отправить" />
-				</div>
-				<p class="form__text">
-					Нажимая на кнопку, Вы соглашаетесь с
-					<a class="form__text form__text--link link-reset" href="#/"
-						>политикой конфиденциальности</a
-					>
-				</p>
-			</form>
+					<div class="form__inputs">
+						<input class="form__input-text" type="text" placeholder="Ваше имя" />
+						<input class="form__input-text" type="text" placeholder="Ваш телефон" />
+						<input class="btn-reset form__input-button" type="submit" value="Отправить" />
+					</div>
+					<p class="form__text">
+						Нажимая на кнопку, Вы соглашаетесь с
+						<a class="form__text form__text--link link-reset" href="#/"
+							>политикой конфиденциальности</a
+						>
+					</p>
+				</form>
+			</div>
 			<div class="steps__cards">
 				<div class="steps__card steps-card">
 					<div class="steps-card__circle"></div>
