--- a/assets/html/chunk/hero.html
+++ b/assets/html/chunk/hero.html
@@ -6,13 +6,11 @@
 				<p class="hero__text">Дадим скидку 5% на любую смету конкурента до 4 апреля</p>
 				<div class="hero__links">
 					<a class="link link-reset hero__link" href="#/">Оставить заявку</a>
-					<a class="link link--transparent link-reset" href="#/"
-						>Посмотреть наши работы</a
-					>
+					<a class="link link--transparent link-reset" href="#/">Посмотреть наши работы</a>
 				</div>
 			</div>
 			<div class="hero__calculator">
-				
+				<h2 class="title">Калькулятор в разработке*</h2>
 			</div>
 		</div>
 	</div>
