Вёрстка секции "Вызов прораба"

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -19,6 +19,7 @@
 				@include('chunk/info.html')
 				@include('chunk/advantage.html')
 				@include('chunk/steps.html')
+				@include('chunk/foreman.html')
 				@include('chunk/repair-cost.html')
 				@include('chunk/questions.html')
 				@include('chunk/contacts.html')
