--- a/assets/html/chunk/installment.html
+++ b/assets/html/chunk/installment.html
@@ -48,7 +48,7 @@
 						<li class="installment-card__item">
 							<div class="installment-card__circle">
 								<svg class="installment-card__icon">
-									<use href="img/icons/sprite.svg#rub"></use>
+									<use href="img/icons/sprite.svg#time"></use>
 								</svg>
 							</div>
 							<p class="installment-card__text">
