--- a/assets/html/chunk/advantage.html
+++ b/assets/html/chunk/advantage.html
@@ -1,8 +1,8 @@
 <section class="section">
 	<div class="container">
-		<h2 class="title">Преимущества заказа услуги у нас</h2>
 		<div class="advantage">
-			<div class="advantage__wrap">
+			<h2 class="title">Преимущества заказа услуги у нас</h2>
+			<div class="advantage__cards">
 				<div class="advantage__card advantage-card">
 					<svg class="advantage-card__icon">
 						<use href="img/icons/sprite.svg#worker"></use>
