--- a/assets/html/chunk/numbers.html
+++ b/assets/html/chunk/numbers.html
@@ -1,7 +1,7 @@
 <section class="section">
 	<div class="container">
 		<div class="numbers">
-			<h2 class="numbers__title title">Наша компания в цифрах</h2>
+			<h2 class="title">Наша компания в цифрах</h2>
 
 			<div class="numbers__cards">
 				<div class="numbers__card numbers-card">
@@ -9,7 +9,7 @@
 					<svg class="numbers-card__icon">
 						<use href="img/icons/sprite.svg#happy-people"></use>
 					</svg>
-					<h3 class="numbers-card__text">Довольных клиента</h3>
+					<h3 class="numbers-card__title">Довольных клиента</h3>
 				</div>
 
 				<div class="numbers__card numbers-card">
@@ -17,7 +17,7 @@
 					<svg class="numbers-card__icon">
 						<use href="img/icons/sprite.svg#square"></use>
 					</svg>
-					<h3 class="numbers-card__text">
+					<h3 class="numbers-card__title">
 						Площадь помещений, в которых мы провели ремонтные работы
 					</h3>
 				</div>
@@ -27,7 +27,7 @@
 					<svg class="numbers-card__icon">
 						<use href="img/icons/sprite.svg#workers"></use>
 					</svg>
-					<h3 class="numbers-card__text">Квалифицированных бригад</h3>
+					<h3 class="numbers-card__title">Квалифицированных бригад</h3>
 				</div>
 
 				<div class="numbers__card numbers-card">
@@ -35,7 +35,7 @@
 					<svg class="numbers-card__icon">
 						<use href="img/icons/sprite.svg#calendar"></use>
 					</svg>
-					<h3 class="numbers-card__text">Календарных дней - средний срок сдачи одного объекта</h3>
+					<h3 class="numbers-card__title">Календарных дней - средний срок сдачи одного объекта</h3>
 				</div>
 			</div>
 		</div>
