Вёрстка и адаптация секции "Под ключ"

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -20,6 +20,7 @@
 				@include('chunk/advantage.html')
 				@include('chunk/steps.html')
 				@include('chunk/repair-cost.html')
+				@include('chunk/turnkey.html')
 				@include('chunk/stock.html')
 				@include('chunk/questions.html')
 				@include('chunk/contacts.html')
