Вёрстка и адаптация секции "Этапы ремонта"

--- a/assets/html/chunk/stock.html
+++ b/assets/html/chunk/stock.html
@@ -1,4 +1,4 @@
-<div class="section">
+<section class="section">
 	<div class="container">
 		<div class="stock">
 			<h2 class="title">Акции</h2>
@@ -40,4 +40,4 @@
 			<a class="link stock__link link-reset" href="#/">Все акции</a>
 		</div>
 	</div>
-</div>
+</section>
