--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -22,6 +22,7 @@
 				@include('chunk/advantage.html')
 				@include('chunk/steps.html')
 				@include('chunk/stock.html')
+				@include('chunk/repair-stages.html')
 				@include('chunk/foreman.html')
 				@include('chunk/turnkey.html')
 				@include('chunk/numbers.html')
