--- a/assets/html/chunk/turnkey.html
+++ b/assets/html/chunk/turnkey.html
@@ -1,4 +1,4 @@
-<div class="section">
+<section class="section">
 	<div class="container">
 		<div class="turnkey">
 			<h2 class="title">Ремонт квартир под ключ в Ярославле</h2>
@@ -26,4 +26,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
