Вёрстка компонента "Калькулятор"

--- a/assets/html/chunk/hero.html
+++ b/assets/html/chunk/hero.html
@@ -9,9 +9,7 @@
 					<a class="link link--transparent link-reset" href="#/">Посмотреть наши работы</a>
 				</div>
 			</div>
-			<div class="hero__calculator">
-				<h2 class="title">Калькулятор в разработке*</h2>
-			</div>
+			@include('../../components/calc/calc.html')
 		</div>
 	</div>
 </section>
