Правки в секции "Примеры работ"

--- a/assets/html/chunk/examples.html
+++ b/assets/html/chunk/examples.html
@@ -14,11 +14,11 @@
 					</div>
 					<div class="examples-card__content">
 						<h3 class="examples-card__title">Косметический ремонт</h3>
-						<div class="examples-card__address address">
-							<svg class="address__icon">
+						<div class="examples-card__geo geo">
+							<svg class="geo__icon">
 								<use href="img/icons/sprite.svg#geo"></use>
 							</svg>
-							<address class="address__text">ул. им. Гоголя, 151</address>
+							<span class="geo__text text">ул. им. Гоголя, 151</span>
 						</div>
 						<div class="examples-card__inner">
 							<span class="examples-card__examples">
@@ -41,11 +41,11 @@
 					</div>
 					<div class="examples-card__content">
 						<h3 class="examples-card__title">Косметический ремонт</h3>
-						<div class="examples-card__address address">
-							<svg class="address__icon">
+						<div class="examples-card__geo geo">
+							<svg class="geo__icon">
 								<use href="img/icons/sprite.svg#geo"></use>
 							</svg>
-							<address class="address__text">ул. им. Гоголя, 151</address>
+							<span class="geo__text text">ул. им. Гоголя, 151</span>
 						</div>
 						<div class="examples-card__inner">
 							<span class="examples-card__examples">
@@ -68,11 +68,11 @@
 					<div class="examples-card__content">
 						<h3 class="examples-card__title">Косметический ремонт</h3>
 
-						<div class="examples-card__address address">
-							<svg class="address__icon">
+						<div class="examples-card__geo geo">
+							<svg class="geo__icon">
 								<use href="img/icons/sprite.svg#geo"></use>
 							</svg>
-							<address class="address__text">ул. им. Гоголя, 151</address>
+							<span class="geo__text text">ул. им. Гоголя, 151</span>
 						</div>
 
 						<div class="examples-card__inner">
