--- a/assets/html/chunk/examples.html
+++ b/assets/html/chunk/examples.html
@@ -6,7 +6,8 @@
 			<div class="examples__cards">
 				<div class="examples__card examples-card">
 					<div class="examples-card__img">
-						<span class="examples-card__deadline">Сроки от 1 дня</span>
+						<span class="examples-card__square">45м<sup>2</sup></span>
+						<span class="examples-card__deadline">53 дня</span>
 						<picture>
 							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
 							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
@@ -33,7 +34,8 @@
 
 				<div class="examples__card examples-card">
 					<div class="examples-card__img">
-						<span class="examples-card__deadline">Сроки от 1 дня</span>
+						<span class="examples-card__square">45м<sup>2</sup></span>
+						<span class="examples-card__deadline">53 дня</span>
 						<picture>
 							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
 							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
@@ -59,7 +61,8 @@
 				</div>
 				<div class="examples__card examples-card">
 					<div class="examples-card__img">
-						<span class="examples-card__deadline">Сроки от 1 дня</span>
+						<span class="examples-card__square">45м<sup>2</sup></span>
+						<span class="examples-card__deadline">53 дня</span>
 						<picture>
 							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
 							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
