--- a/assets/html/chunk/installment.html
+++ b/assets/html/chunk/installment.html
@@ -2,6 +2,7 @@
 	<div class="container">
 		<div class="installment">
 			<div class="installment__card installment-card">
+				<div class="installment-card__circle-left">0%</div>
 				<h2 class="installment-card__title">Ремонт квартиры в рассрочку без %</h2>
 
 				<ul class="installment-card__list list-reset">
@@ -59,6 +60,10 @@
 				</ul>
 
 				<a class="installment-card__link link link-reset" href="#/">Подробнее</a>
+				<div class="installment-card__circle-right">
+					<span class="installment-card__text installment-card__text--big">12</span>
+					<span>месяцев</span>
+				</div>
 			</div>
 		</div>
 	</div>
