Вёрстка и адаптация секции "Специалисты"

--- a/assets/html/chunk/examples.html
+++ b/assets/html/chunk/examples.html
@@ -6,8 +6,18 @@
 			<div class="examples__cards">
 				<div class="examples__card examples-card">
 					<div class="examples-card__img">
-						<span class="examples-card__square">45м<sup>2</sup></span>
-						<span class="examples-card__deadline">53 дня</span>
+						<span class="examples-card__square">
+							<svg class="examples-card__icon">
+								<use href="img/icons/sprite.svg#square"></use>
+							</svg>
+							45м<sup>2</sup></span
+						>
+						<span class="examples-card__deadline">
+							<svg class="examples-card__icon">
+								<use href="img/icons/sprite.svg#time"></use>
+							</svg>
+							53 дня
+						</span>
 						<picture>
 							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
 							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
@@ -34,8 +44,18 @@
 
 				<div class="examples__card examples-card">
 					<div class="examples-card__img">
-						<span class="examples-card__square">45м<sup>2</sup></span>
-						<span class="examples-card__deadline">53 дня</span>
+						<span class="examples-card__square">
+							<svg class="examples-card__icon">
+								<use href="img/icons/sprite.svg#square"></use>
+							</svg>
+							45м<sup>2</sup></span
+						>
+						<span class="examples-card__deadline">
+							<svg class="examples-card__icon">
+								<use href="img/icons/sprite.svg#time"></use>
+							</svg>
+							53 дня
+						</span>
 						<picture>
 							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
 							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
@@ -61,8 +81,18 @@
 				</div>
 				<div class="examples__card examples-card">
 					<div class="examples-card__img">
-						<span class="examples-card__square">45м<sup>2</sup></span>
-						<span class="examples-card__deadline">53 дня</span>
+						<span class="examples-card__square">
+							<svg class="examples-card__icon">
+								<use href="img/icons/sprite.svg#square"></use>
+							</svg>
+							45м<sup>2</sup></span
+						>
+						<span class="examples-card__deadline">
+							<svg class="examples-card__icon">
+								<use href="img/icons/sprite.svg#time"></use>
+							</svg>
+							53 дня
+						</span>
 						<picture>
 							<source type="image/webp" data-srcset="@img/cost/repair-photo-1.webp" />
 							<img class="lazyload" alt="Ремонт" data-src="@img/cost/repair-photo-1.jpg" />
