Вёрстка секции "Средние сроки на выполнение ремонта"

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -22,6 +22,7 @@
 				@include('chunk/advantage.html')
 				@include('chunk/examples.html')
 				@include('chunk/steps.html')
+				@include('chunk/deadline.html')
 				@include('chunk/where.html')
 				@include('chunk/stock.html')
 				@include('chunk/repair-stages.html')
