--- a/assets/html/chunk/deadline.html
+++ b/assets/html/chunk/deadline.html
@@ -3,7 +3,7 @@
 		<div class="deadline">
 			<h2 class="title">Средние сроки на выполнение ремонта</h2>
 
-			<div class="table__wrap">
+			<div class="table-wrap">
 				<table class="table">
 					<thead class="table__header">
 						<tr class="table__row">
