--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -25,6 +25,7 @@
 				@include('chunk/deadline.html')
 				@include('chunk/where.html')
 				@include('chunk/stock.html')
+				@include('chunk/service-prices.html')
 				@include('chunk/repair-stages.html')
 				@include('chunk/foreman.html')
 				@include('chunk/turnkey.html')
