--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -27,6 +27,7 @@
 				@include('chunk/stock.html')
 				@include('chunk/service-prices.html')
 				@include('chunk/repair-stages.html')
+				@include('chunk/cost-depends.html')
 				@include('chunk/foreman.html')
 				@include('chunk/turnkey.html')
 				@include('chunk/experts.html')
