--- a/assets/html/chunk/footer.html
+++ b/assets/html/chunk/footer.html
@@ -1,5 +1,66 @@
 <footer class="footer">
 	<div class="container">
+		<div class="footer__wrap">
+			<div class="footer__left">
+				<a class="header__logo logo" href="#">
+					<img class="logo__img" src="@img/header/logo.svg" alt="Logo" />
+				</a>
 
+				<div class="accept-payment">
+					<span class="accept-payment__text">Принимаем к оплате:</span>
+					<div class="accept-payment__icons">
+						<svg class="accept-payment__icon">
+							<use href="img/icons/sprite.svg#visa"></use>
+						</svg>
+						<svg class="accept-payment__icon">
+							<use href="img/icons/sprite.svg#mastercard"></use>
+						</svg>
+						<svg class="accept-payment__icon">
+							<use href="img/icons/sprite.svg#mir"></use>
+						</svg>
+					</div>
+				</div>
+			</div>
+
+			<div class="footer__right">
+				<div class="footer__menu">
+					<h2 class="footer__title">Услуги</h2>
+					<ul class="footer__list list-reset">
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Ремонт квартир</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Ремонт домов</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Дизайн интерьеров</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Ремонт офисов</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Строительство домов в Ярославле</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer__menu">
+					<h2 class="footer__title">Информация</h2>
+					<ul class="footer__list list-reset">
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Наши работы и отзывы</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Акции и скидки</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Рассрочка</a>
+						</li>
+						<li class="footer__item">
+							<a class="footer__link link-reset" href="#/">Контакты</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 </footer>
