Подключение библиотеки fslightbox, вёрстка и адаптация секции "Галерея наших работ"

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -28,6 +28,7 @@
 				@include('chunk/service-prices.html')
 				@include('chunk/repair-stages.html')
 				@include('chunk/cost-depends.html')
+				@include('chunk/gallery.html')
 				@include('chunk/foreman.html')
 				@include('chunk/turnkey.html')
 				@include('chunk/experts.html')
