Вёрстка секции ""Этапы ремонта"

--- a/assets/html/product-page.html
+++ b/assets/html/product-page.html
@@ -16,6 +16,7 @@
 			<main class="main">
 				@include('chunk/product-hero.html')
 				@include('chunk/product-repair.html')
+				@include('chunk/product-stages.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
