Правки карточек в секции "Примеры работ"

--- a/assets/html/chunk/product-stages.html
+++ b/assets/html/chunk/product-stages.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section--decor">
 	<div class="container">
 		<div class="product-stages stages-tabs">
 			<div class="stages-tabs__header">
