Адаптация секций "Этапы ремонта" и "Стоимость отдельных видов работ"

--- a/assets/html/chunk/product-stages.html
+++ b/assets/html/chunk/product-stages.html
@@ -159,7 +159,7 @@
 					</div>
 					<div class="stages-content__photos">
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo1.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo1.jpg" data-fslightbox="gallery3">
 								<picture>
 									<source
 										type="image/webp"
@@ -174,7 +174,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo2.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo2.jpg" data-fslightbox="gallery3">
 								<picture>
 									<source
 										type="image/webp"
@@ -189,7 +189,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo3.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo3.jpg" data-fslightbox="gallery3">
 								<picture>
 									<source
 										type="image/webp"
@@ -204,7 +204,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo4.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo4.jpg" data-fslightbox="gallery3">
 								<picture>
 									<source
 										type="image/webp"
@@ -265,7 +265,7 @@
 					</div>
 					<div class="stages-content__photos">
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo1.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo1.jpg" data-fslightbox="gallery4">
 								<picture>
 									<source
 										type="image/webp"
@@ -280,7 +280,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo2.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo2.jpg" data-fslightbox="gallery4">
 								<picture>
 									<source
 										type="image/webp"
@@ -295,7 +295,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo3.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo3.jpg" data-fslightbox="gallery4">
 								<picture>
 									<source
 										type="image/webp"
@@ -310,7 +310,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo4.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo4.jpg" data-fslightbox="gallery4">
 								<picture>
 									<source
 										type="image/webp"
@@ -371,7 +371,7 @@
 					</div>
 					<div class="stages-content__photos">
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo1.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo1.jpg" data-fslightbox="gallery5">
 								<picture>
 									<source
 										type="image/webp"
@@ -386,7 +386,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo2.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo2.jpg" data-fslightbox="gallery5">
 								<picture>
 									<source
 										type="image/webp"
@@ -401,7 +401,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo3.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo3.jpg" data-fslightbox="gallery5">
 								<picture>
 									<source
 										type="image/webp"
@@ -416,7 +416,7 @@
 							</a>
 						</div>
 						<div class="stages-content__img">
-							<a href="@img/product-stages/first-stage-photo4.jpg" data-fslightbox="gallery2">
+							<a href="@img/product-stages/first-stage-photo4.jpg" data-fslightbox="gallery5">
 								<picture>
 									<source
 										type="image/webp"
@@ -434,9 +434,6 @@
 				</div>
 			</div>
 		</div>
+		<p class="text product-stages__text">Вы можете остановить и принять работы на любом этапе!</p>
 	</div>
 </section>
-
-<svg class="">
-	<use href="img/sprite.svg#"></use>
-</svg>
