Вёрстка и адаптация секции "На цену влияют"

--- a/assets/html/product-page.html
+++ b/assets/html/product-page.html
@@ -16,6 +16,7 @@
 				@include('chunk/product-hero.html')
 				@include('chunk/product-repair.html')
 				@include('chunk/product-stages.html')
+				@include('chunk/price-impact.html')
 				@include('chunk/separate-cost.html')
 			</main>
 			@include('chunk/footer.html')
