Мелкие правки по всему сайту

--- a/assets/html/chunk/cost.html
+++ b/assets/html/chunk/cost.html
@@ -129,8 +129,8 @@
 					</p>
 					<div class="form__socials">
 						<div class="form__social form-social">
-							<input class="is-hidden" id="telegram" name="social" type="radio" value="telegram" />
-							<label class="form-social__label" for="telegram">
+							<input class="is-hidden" id="telegramCost" name="social" type="radio" value="telegram" />
+							<label class="form-social__label" for="telegramCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#telegram-icon"></use>
 								</svg>
@@ -139,8 +139,8 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="whatsapp" name="social" type="radio" value="whatsapp" />
-							<label class="form-social__label" for="whatsapp">
+							<input class="is-hidden" id="whatsappCost" name="social" type="radio" value="whatsapp" />
+							<label class="form-social__label" for="whatsappCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#whatsapp-icon"></use>
 								</svg>
@@ -149,8 +149,8 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="phone" name="social" type="radio" value="phone" />
-							<label class="form-social__label" for="phone">
+							<input class="is-hidden" id="phoneCost" name="social" type="radio" value="phone" />
+							<label class="form-social__label" for="phoneCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#phone-icon"></use>
 								</svg>
@@ -159,8 +159,8 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="viber" name="social" type="radio" value="viber" />
-							<label class="form-social__label" for="viber">
+							<input class="is-hidden" id="viberCost" name="social" type="radio" value="viber" />
+							<label class="form-social__label" for="viberCost">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#viber-icon"></use>
 								</svg>
