--- a/assets/html/chunk/steps.html
+++ b/assets/html/chunk/steps.html
@@ -17,8 +17,14 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="whatsapp" name="social" type="radio" value="whatsapp" />
-							<label class="form-social__label" for="whatsapp">
+							<input
+								class="is-hidden"
+								id="whatsappSteps"
+								name="social"
+								type="radio"
+								value="whatsapp"
+							/>
+							<label class="form-social__label" for="whatsappSteps">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#whatsapp-icon"></use>
 								</svg>
@@ -27,8 +33,8 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="phone" name="social" type="radio" value="phone" />
-							<label class="form-social__label" for="phone">
+							<input class="is-hidden" id="phoneSteps" name="social" type="radio" value="phone" />
+							<label class="form-social__label" for="phoneSteps">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#phone-icon"></use>
 								</svg>
@@ -37,8 +43,8 @@
 						</div>
 
 						<div class="form__social form-social">
-							<input class="is-hidden" id="viber" name="social" type="radio" value="viber" />
-							<label class="form-social__label" for="viber">
+							<input class="is-hidden" id="viberSteps" name="social" type="radio" value="viber" />
+							<label class="form-social__label" for="viberSteps">
 								<svg class="form-social__icon">
 									<use href="img/icons/sprite.svg#viber-icon"></use>
 								</svg>
@@ -47,7 +53,7 @@
 						</div>
 					</div>
 					<div class="form__inputs">
-						<input class="form__input-text" type="text" placeholder="Ваше имя" />
+						<input class="form__input-text" id="nameSteps" type="text" placeholder="Ваше имя" />
 						<input class="form__input-text" type="text" placeholder="Ваш телефон" />
 						<input class="btn-reset form__input-button" type="submit" value="Отправить" />
 					</div>
