--- a/assets/html/chunk/hero.html
+++ b/assets/html/chunk/hero.html
@@ -5,7 +5,7 @@
 				<h1 class="hero__title">Ремонт квартир под ключ в&nbsp;Ярославле</h1>
 				<p class="hero__text">Дадим скидку 5% на любую смету конкурента до 4 апреля</p>
 				<div class="hero__links">
-					<a class="link link-reset hero__link" href="#/">Оставить заявку</a>
+					<a class="link link-reset" href="#/">Оставить заявку</a>
 					<a class="link link--transparent link-reset" href="#/">Посмотреть наши работы</a>
 				</div>
 			</div>
