--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -35,6 +35,7 @@
 				@include('chunk/numbers.html')
 				@include('chunk/questions.html')
 				@include('chunk/contacts.html')
+				@include('chunk/tags.html')
 			</main>
 			@include('chunk/footer.html')
 		</div>
