Подключение модальных окон

--- a/assets/html/chunk/contacts.html
+++ b/assets/html/chunk/contacts.html
@@ -21,7 +21,7 @@
 					</div>
 				</div>
 
-				<a class="contacts__link link link-reset" href="#/">Оставить заявку</a>
+				<a class="contacts__link link link-reset modal-link" href="#modalApplication">Оставить заявку</a>
 			</div>
 
 			<div class="contacts__map map">
