--- a/assets/html/chunk/installment.html
+++ b/assets/html/chunk/installment.html
@@ -59,7 +59,7 @@
 					</li>
 				</ul>
 
-				<a class="installment-card__link link link-reset" href="#/">Подробнее</a>
+				<a class="installment-card__link link link-reset modal-link" href="#modalInstallment">Подробнее</a>
 				<div class="installment-card__circle-right">
 					<span class="installment-card__text installment-card__text--big">12</span>
 					<span>месяцев</span>
