--- a/assets/html/chunk/stock.html
+++ b/assets/html/chunk/stock.html
@@ -8,7 +8,7 @@
 						Скидка при оформлении онлайн&nbsp;&#8209;&nbsp;до&nbsp;5%
 					</h3>
 					<div class="stock-card__inner">
-						<a class="stock-card__link link link--transparent link-reset" href="#">Подробнее</a>
+						<a class="stock-card__link link link--transparent link-reset modal-link" href="#modalStock">Подробнее</a>
 						<svg class="stock-card__icon">
 							<use href="img/icons/sprite.svg#smartphone"></use>
 						</svg>
@@ -19,7 +19,7 @@
 						Скидка на строительные материалы&nbsp;&#8209;&nbsp;до&nbsp;20%
 					</h3>
 					<div class="stock-card__inner">
-						<a class="stock-card__link link link--transparent link-reset" href="#">Подробнее</a>
+						<a class="stock-card__link link link--transparent link-reset modal-link" href="#modalStock">Подробнее</a>
 						<svg class="stock-card__icon">
 							<use href="img/icons/sprite.svg#tools"></use>
 						</svg>
@@ -30,7 +30,7 @@
 						При заказе евроремонта, дизайн-проект квартиры в подарок
 					</h3>
 					<div class="stock-card__inner">
-						<a class="stock-card__link link link--transparent link-reset" href="#">Подробнее</a>
+						<a class="stock-card__link link link--transparent link-reset modal-link" href="#modalStock">Подробнее</a>
 						<svg class="stock-card__icon">
 							<use href="img/icons/sprite.svg#interior"></use>
 						</svg>
