--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -38,6 +38,10 @@
 				@include('chunk/tags.html')
 			</main>
 			@include('chunk/footer.html')
+			@include('../components/modal/modal-application.html')
+			@include('../components/modal/modal-question.html')
+			@include('../components/modal/modal-installment.html')
+			@include('../components/modal/modal-stock.html')
 		</div>
 		<script src="js/scripts.min.js"></script>
 	</body>
