--- a/assets/html/chunk/tags.html
+++ b/assets/html/chunk/tags.html
@@ -1,7 +1,7 @@
 <section class="section">
 	<div class="container">
 		<div class="tags">
-			<div class="tags__wrap hidden">
+			<div class="tags__wrap">
 				<div class="tags__item tag">
 					<span class="tag__name"> Маякам </span>
 				</div>
