--- a/assets/html/chunk/where.html
+++ b/assets/html/chunk/where.html
@@ -4,33 +4,37 @@
 			<h2 class="title">Где необходим ремонт?</h2>
 
 			<div class="where__cards">
-				<div
-					class="where__card where-card"
+				<a
+					class="where__card where-card link-reset"
+					href="#/"
 					style="background-image: url('@img/where/where-img-1.jpg')"
 				>
 					<h3 class="where-card__title">Ремонт в квартире</h3>
-				</div>
+				</a>
 
-				<div
-					class="where__card where-card"
+				<a
+					class="where__card where-card link-reset"
+					href="#/"
 					style="background-image: url('@img/where/where-img-2.jpg')"
 				>
 					<h3 class="where-card__title">Ремонт в офисе</h3>
-				</div>
+				</a>
 
-				<div
-					class="where__card where-card"
+				<a
+					class="where__card where-card link-reset"
+					href="#/"
 					style="background-image: url('@img/where/where-img-3.jpg')"
 				>
 					<h3 class="where-card__title">Ремонт в частном доме</h3>
-				</div>
+				</a>
 
-				<div
-					class="where__card where-card"
+				<a
+					class="where__card where-card link-reset"
+					href="#/"
 					style="background-image: url('@img/where/where-img-4.jpg')"
 				>
 					<h3 class="where-card__title">Дизайн интерьера</h3>
-				</div>
+				</a>
 			</div>
 		</div>
 	</div>
