--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -39,6 +39,7 @@
 			</main>
 			@include('chunk/footer.html')
 			@include('../components/sidebar/sidebar.html')
+			@include('../components/modal/modal-quiz.html')
 			@include('../components/modal/modal-application.html')
 			@include('../components/modal/modal-question.html')
 			@include('../components/modal/modal-installment.html')
