Вёрстка секции "Видеоотзывы"

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -23,6 +23,7 @@
 				@include('chunk/examples.html')
 				@include('chunk/steps.html')
 				@include('chunk/reviews.html')
+				@include('chunk/video-review.html')
 				@include('chunk/deadline.html')
 				@include('chunk/where.html')
 				@include('chunk/stock.html')
