--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -41,6 +41,7 @@
 			</main>
 			@include('chunk/footer.html')
 			@include('../components/sidebar/sidebar.html')
+			@include('../components/sidebar/sidebar-socials.html')
 			@include('../components/modal/modal-quiz.html')
 			@include('../components/modal/modal-application.html')
 			@include('../components/modal/modal-question.html')
